--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -42,7 +42,8 @@
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li> {{ amenity.name }} </li>
+	      <li> <INPUT type="checkbox" data-id="{{amenity_id}}"
+			  data-name="{{amenity_name}}"></li>
 	      {% endfor %}
 	    </ul>
 	  </div>
