--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -38,12 +38,11 @@
 	</div>
 	<div class="amenities">
 	  <h3>Amenities</h3>
-	  <h4>&nbsp;</h4>
+	  <h4>Acá en el H4</h4>
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li> <INPUT type="checkbox" data-id="{{amenity_id}}"
-			  data-name="{{amenity_name}}"> {{ amenity.name }} </li>
+	      <li> <input type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}"> {{ amenity.name }} </li>
 	      {% endfor %}
 	    </ul>
 	  </div>
