--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -3,20 +3,26 @@ header {
     height: 70px;
     width: 100%;
     border-bottom: 1px solid #CCCCCC;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 header .logo {
-    background: url("../images/logo.png") no-repeat;
-    left: 20px;
-    height: 100%;
+
+    width: 142px;
+    height: 60px;
+    background: url("../images/logo.png") no-repeat center;
+    margin-left: 20px;
 }
-header .id {
-    align: right;
+
+header #api_status {
+    margin-right: 30px;
+    border-radius: 50%;
     width: 40px;
     height: 40px;
-    border-radius: 50%;
-    vertical-align: middle;
-    margin-right: 30px;
-    background: #cccccc
+    background-color: #CCCCCC;
 }
-header .available {
-    background: #ff545f;
+
+header #api_status .available {
+    background-color: #FF545F;
+}
